Fixed js for overflow and sizing As per my last commit I was unsatisfied with my original solution to overflow and sizing, as a result I found that creating an element that tracks the width of the text in the display that allows for a marker to adjust for fontsizing to be more concise and readable.
Last commit until I decide to optimize for mobile.

--- a/style.css
+++ b/style.css
@@ -222,3 +222,8 @@ button.misc:hover {
     overflow: hidden;
     font-family: Orbitron;
 }
+
+.adjust{
+    visibility: hidden;
+    position: absolute;
+}
